[gd_scene load_steps=5 format=3 uid="uid://dyg4n0iatwdyj"]

[ext_resource type="Theme" uid="uid://mc1vfdpl1w2e" path="res://UI/theme.tres" id="1_gpnk8"]
[ext_resource type="Script" path="res://Paused.gd" id="2_qowl4"]
[ext_resource type="PackedScene" uid="uid://btcjbf7ilha80" path="res://UI/konfirmasi_ulang.tscn" id="3_47wb1"]
[ext_resource type="PackedScene" uid="uid://l0jl3hd7u4kv" path="res://UI/konfirmasi_menu_utama.tscn" id="4_t8ju4"]

[node name="Paused" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gpnk8")
script = ExtResource("2_qowl4")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.705882)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -128.0
offset_right = 126.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "paused"

[node name="btnLanjut" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "lanjut"

[node name="btnUlangi" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ulangi"

[node name="btnMenuUtama" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "menu utama"

[node name="konfirmasiUlang" type="CanvasLayer" parent="."]
visible = false

[node name="konfirmasiUlang" parent="konfirmasiUlang" node_paths=PackedStringArray("pause") instance=ExtResource("3_47wb1")]
pathFile = " "
pause = NodePath("../..")

[node name="konfirmasiMenuUtama" type="CanvasLayer" parent="."]
visible = false

[node name="konfirmasiMenuUtama" parent="konfirmasiMenuUtama" node_paths=PackedStringArray("pause") instance=ExtResource("4_t8ju4")]
pathFile = "res://UI/menu_utama.tscn"
pause = NodePath("../..")

[connection signal="pressed" from="VBoxContainer/btnLanjut" to="." method="_on_btn_lanjut_pressed"]
[connection signal="pressed" from="VBoxContainer/btnUlangi" to="." method="_on_btn_ulangi_pressed"]
[connection signal="pressed" from="VBoxContainer/btnMenuUtama" to="." method="_on_btn_menu_utama_pressed"]
